[gd_scene load_steps=9 format=3 uid="uid://bkqg746td2asx"]

[ext_resource type="Script" uid="uid://dsb1ch8a7q1og" path="res://Game/scripts/game.gd" id="1_7475e"]
[ext_resource type="PackedScene" uid="uid://dnt4p0i1i5qk1" path="res://Game/scenes/Deck.tscn" id="1_ds5t7"]
[ext_resource type="PackedScene" uid="uid://daynfobgnbdrp" path="res://Game/scenes/combat_zone.tscn" id="2_w3xpy"]
[ext_resource type="Script" uid="uid://bj67ghukul3cy" path="res://Game/scripts/player_control.gd" id="4_w3xpy"]
[ext_resource type="PackedScene" uid="uid://dr51qu20aa77" path="res://Game/scenes/Card.tscn" id="5_jik8v"]
[ext_resource type="Texture2D" uid="uid://bvhgqh6fy2vbd" path="res://icon.svg" id="6_2jiha"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vc2ns"]
size = Vector3(20, 20, 0.01)

[sub_resource type="World3D" id="World3D_bqf56"]

[node name="Game" type="Node3D"]
script = ExtResource("1_7475e")

[node name="combatZone" parent="." instance=ExtResource("2_w3xpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93488, 0.001, 0)

[node name="combatZone2" parent="." instance=ExtResource("2_w3xpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.569379, 0.001, 0)

[node name="combatZone3" parent="." instance=ExtResource("2_w3xpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86611, 0.001, 0)

[node name="Deck" parent="." instance=ExtResource("1_ds5t7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.785, 0.15827, 1.93933)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, -0.0602603, 3.63253, 0.564997)
current = true

[node name="PlayerHand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3694, -1.6313)

[node name="mouseInterceptPlane" type="StaticBody3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3694, -1.6313)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/mouseInterceptPlane"]
shape = SubResource("BoxShape3D_vc2ns")

[node name="SpotLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(0.99368, 0.00305977, 0.112208, -0.112249, 0.0270864, 0.993311, 0, -0.999628, 0.0272587, 1.37973, 5.90346, 0)
light_energy = 8.0
omni_range = 50.0

[node name="playerControl" type="Node3D" parent="."]
script = ExtResource("4_w3xpy")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="draw" type="Button" parent="UI"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 31.0
text = "Draw"

[node name="PlayerPoint" type="Label" parent="UI"]
layout_mode = 0
offset_left = 108.0
offset_top = 5.0
offset_right = 148.0
offset_bottom = 28.0
text = "0"

[node name="cardPopup" type="SubViewport" parent="."]
own_world_3d = true
world_3d = SubResource("World3D_bqf56")
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(214, 269)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="cardPopup"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.58, 0)
current = true

[node name="Card" parent="cardPopup" instance=ExtResource("5_jik8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="cardPopup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.177323, 0)
omni_attenuation = 0.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="CardPopupDisplay" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 103.0
offset_right = 208.0
offset_bottom = 463.0
texture = ExtResource("6_2jiha")
expand_mode = 1
stretch_mode = 2
